# transcribe

./: .gitignore  README.md  diarize.py  diarize.sh  pyproject.toml  setup.sh  transcribe.py  transcribe.sh
src/transcribe/: __init__.py  auth.py  cli_diarize.py  cli_transcribe.py  config.py  diarization.py  formatting.py  output.py
src/transcribe/cli/: diarize.py  transcribe.py
